# openFund-AI

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  main.py  problems_identified.md  pyproject.toml  revision.md  skills-lock.json  some_plan.md  summarize_csvs.py
.claude/: README.md
.cursor/: MERGE.md  README-claude.md  hooks.json
.tmp_milvus_cfg/: embedEtcd.yaml  user.yaml
a2a/: __init__.py  acl_message.py  conversation_manager.py  message_bus.py
agents/: __init__.py  analyst_agent.py  analyst_analysis.py  analyst_helpers.py  analyst_orchestration.py  base_agent.py  librarian_agent.py  librarian_orchestration.py  planner_agent.py  planner_context.py  planner_decompose.py  planner_formatting.py  planner_orchestration.py  planner_sufficiency.py  planner_types.py  responder_agent.py  websearch_agent.py  websearch_constants.py  websearch_helpers.py  websearch_news_processing.py  websearch_news_sources.py  websearch_orchestration.py  websearch_pipeline.py  websearch_symbol_resolution.py
api/: __init__.py  rest.py  websocket.py
config/: __init__.py  config.py
data/: __init__.py  __main__.py  cli.py  env_loader.py  milvus.py  neo4j.py  populate.py  postgres.py
data_manager/: __init__.py  __main__.py  backend_cli.py  classifier.py  collector.py  consolidation.py  distributor.py  doctor.py  empty_markers.py  report_extractor.py  schemas.py  tasks.py  transformer.py
data_prep/: README.md  neo4j_postgres_milvus_integration.md
database/: Energy_Select_Sector_SPDR_Fund.json  agent_heuristics.json  symbol_resolution_aliases.json  symbol_resolution_known_issuers.json  symbol_resolution_routing.json
database_data/: README.md  check_symbol_completeness_and_fix.py  display_postprocessed.ipynb  yahoo_csv_postprocess.py  yahoo_key_statistics_pages.py  yahoo_quote_core.py
datasets/: combined_funds.json
demo/: __init__.py  __main__.py  demo_chat.py  run.sh  (+2 more)
(+315 files in other folders)
