[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "openfund-ai"
version = "0.2.0"
description = "Open-source investment research frameworks"
readme = "docs/claude-v2.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["a2a*", "agents*", "api*", "safety*", "output*", "mcp*", "config*"]
