[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "openfund-ai"
version = "0.2.0"
description = "Open-source investment research frameworks"
readme = "docs/claude-v2.md"
requires-python = ">=3.9"
dependencies = [
    "yfinance>=0.2.0",
    "pandas>=2.0.0",
    "python-dateutil>=2.8.0",
    "rank_bm25>=0.2.2",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1.0", "black>=24.0.0"]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "UP045"]
per-file-ignores = { "tests/*" = ["S101"] }

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'
exclude = '''
/(\.git|\.venv|build|dist)/
'''

[tool.setuptools.packages.find]
where = ["."]
include = ["a2a*", "agents*", "api*", "safety*", "output*", "mcp*", "config*", "memory*"]
